# CoreRunner

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.console/: log.md
.custodian/: config.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/core_runner/: __init__.py  errors.py  process.py  runtime.py
src/core_runner/contracts/: __init__.py  invocation.py  result.py
src/core_runner/io/: __init__.py  json_io.py  paths.py
src/core_runner/runners/: __init__.py  async_http_runner.py  base.py  http_runner.py  manual_runner.py  subprocess_runner.py
tests/: test_dispatch.py  test_process.py  test_runtime.py
tests/contracts/: test_invocation_contract.py  test_result_contract.py
tests/runners/: test_async_http_runner.py  test_http_runner.py  test_manual_runner.py  test_subprocess_runner.py
